--- a/WEB/COMMENT.html
+++ b/WEB/COMMENT.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>別人對YoChang說的話</h1>
-<p>別人對YoChang說的話</p>
+<p>別人對YoChang說的話:hihi by b10430110 sharon</p>
 
 <a href="C:\Users\MA303\Desktop\首頁.html">首頁</a>
 <a href="C:\Users\MA303\Desktop\自我介紹.html">自我介紹</a>
